2008-12-31  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/setup.py: Bump to 1.4
	* windows-vc2005/setenv.txt, windows-vc2005/OBPythonOBF/obpython.bat,
	setup.py, openbabel_postinstall.py (deleted), OBPythonOBF.vcproj: Bump
	to 1.4, make separate configurations for different Python versions,
	only install the .pyd and .py files

2008-12-30  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi:
	Updated to install the Java bindings as well as several missing data
	files. Also removed the old NSIS script.
	* windows-vc2005/Distribution/CheckInstallerScript.py: Double click
	this Python script to perform some sanity checks of the files
	installed and uninstalled by the NSIS script installer

2008-12-30  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/java/OBTest.java, README: Finish the move to using
	openbabel_java.so, rather than openbabel.so

2008-12-28  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-java.i: Move to openbabel_java.so or .dll, rather
	than openbabel.so or .dll (breaks Linux Java bindings temporarily) to
	avoid clashes with other scripting language dlls
	* windows-vc2005/OBJava/OBJava.vcproj: Move to openbabel_java.dll and
	correct hard-coded path to Java include directories

2008-12-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, src/formats/Makefile.am: Update checking for zlib
	and compiling pngformat.

2008-12-27  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-python.i: (1) Accessing SetData now raises an
	Exception pointing the user to CloneData instead, (2) Ignore some
	new shadowed classes and methods, (3) Copy some global variables from
	cvar into the main namespace

2008-12-17  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/java/README, OBTest.java: More fixes to docs, and replaced
	the test file with something more substantial.

2008-12-17  Noel O'Boyle  <baoilleach@gmail.com>
