@@ -98,6 +98,7 @@ namespace OpenBabel
     bool SetTypes();
     //!  Fill OBFFXXXCalculation vectors
     bool SetupCalculations();
+    bool SetupVDWCalculation(OBAtom *a, OBAtom *b, OBFFVDWCalculationUFF &vdwcalc);
     //!  By default, electrostatic terms are disabled
     //!  This is discouraged, since the parameterization is not designed for it
     //!  But if you want, we give you the option.
